--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "autoprefixer": "^9",
+    "postcss": "^7",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.20.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "webpack-dev-server": "^3.11.2"
   }
 }
